ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    name: front-end-ingress
  spec:
    ingressClassName: nginx
    rules:
      - host: sock-shop.com
        http:
          paths:
            - pathType: Prefix
              backend:
                service:
                  name: front-end
                  port:
                    number: 80
              path: /
